# jaws

./: .codeclimate.yml  .coveragerc  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  build.sh  cromwell.Dockerfile  cromwell.test.conf  docker-build.sh  docker-compose.test.yml  docker-compose.yml  image_version.yml  jaws-site.def  jaws_site.conf  local_development.md  pyproject.toml  requirements.txt  rpc.xml  site.Dockerfile  site.xml  start-jaws.sh
central/: Dockerfile  Dockerfile-auth  MANIFEST.in  README.md  config.ini  docker-entrypoint.sh  env_vars.activate.sh  env_vars.deactivate.sh  jaws-central.ini  jaws_central.yml  jaws_flask.cfg  jaws_sites.ini  pyproject.toml  requirements.txt  setup.py  site.ini  swagger.yml
central/common/: env_interpolation.py
central/jaws_central/: .cli.py.swp  analysis.py  auth.py  aws_transfer.py  catalog.py  catalog_cli.py  catalog_rest.py  cli.py  config.py  daemon.py  data_transfer.py  data_transfer_protocol.py  database.py  datatransfer_protocol.py  dateutils.py  env_interpolation.py  es_operations.py  flask_db.py  globus.py  jaws_central_schedule.py  jaws_constants.py  log.py  models.py  models_fsa.py  models_sa.py  report_daemon.py  rest.py  rpc_client.py  rpc_manager.py  rpc_methods.py  rpc_operations.py  run.py  run_daemon.py  run_log.py  run_report.py  runs.py  server.py  setup.py  swagger.auth.yml  swagger.rest.yml  (+10 more)
central/tests/: __init__.py  conftest.py  test_analysis.py  test_auth.py  test_config.py  test_globus.py  test_jaws_constants.py  test_rest.py  test_rpc_client.py  test_rpc_manager.py  test_runs.py  test_transfers.py  test_utils.py
client/: .gitignore  README.md  client.xml  example_client.ini  jaws  jaws-client.ini  jaws-user.ini  jaws_client.ini  pyproject.toml  rabbitmq.config  requirements.txt  setup.py
client/jaws_client/: admin.py  analysis.py  api.py  catalog.py  cli.py  config.ini  config.py  copy_progress.py  deprecated.py  env_interpolation.py  env_vars.activate.sh  env_vars.deactivate.sh  log.py  model.py  runLog.py  runs.py  taskLog.py  user.py  utils.py  wdl_functions.py  wdl_runtime_validator.py  wfcopy.py  workflow.py
client/tests/: conftest.py  jaws_client.ini  test_analysis.py  test_api.py  test_cli.py  test_wdl_runtime_validator.py  test_wfcopy.py  test_workflow.py
jtm/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.py  ssh_tunnel_pnnl.sh
jtm/deploy/: deploy.txt
jtm/docker/: Dockerfile  docker_build.sh  jtm-worker-task-def.json  requirements.txt  run_jtm.sh
jtm/example/: compute_something.sh  env.csh  jeff_test.json  jtm_task.json  jtm_task_long.json  jtm_task_long30.json  jtm_task_long60.json  jtm_task_long600.json  jtm_task_no_output.json  jtm_task_pool_cori.json  jtm_task_pool_cori_node10_nwpn16.json  jtm_task_pool_cori_node2_nwpn4.json  jtm_task_pool_cori_nonshared.json  jtm_task_pool_cori_nwpn4.json  jtm_task_pool_cori_poolsize3.json  jtm_task_pool_cori_skylake.json  jtm_task_pool_denovo_nonshared.json  jtm_task_pool_dynamoc_480GB_mem_worker_jaws_lbl_gov.json  jtm_task_pool_dynamoc_large_worker_jaws_lbl_gov.json  jtm_task_simple.json  jtm_task_simple_cori.json  jtm_task_simple_cori_skylake.json  jtm_task_simple_cori_testpool.json  jtm_task_simple_cori_testpool_knl.json  jtm_tasks.json  jtm_worker_cmd_for_cori_to_start_workers.sh  skylake.q  start_a_jtm_worker_on_cori.sh  start_a_jtm_worker_on_lbl.sh  test_cori.q  worker.q  worker_phoebe_debug.q
jtm/jaws_jtm/: HISTORY  REVISIONS  common.py  config.ini  config.py  jtm.ini  jtm.py  jtm_check_manager.py  jtm_check_worker.py  jtm_isalive.py  jtm_kill.py  jtm_manager.py  jtm_remove_pool.py  jtm_resource_log.py  jtm_status.py  jtm_submit.py  jtm_worker.py  performance_metrics.py
jtm/test/: test_dbutils.py  test_rabbitmqconnection.py  test_run.py
jtm/tests/: docker-compose.yml  test_dbutils.py  test_rabbitmqconnection.py  test_run.py
pubsub/: mypy.ini  pyproject.toml
rpc/: Dockerfile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  rpc_client.ini  rpc_server.ini  setup.py
rpc/jaws_rpc/: jsonrpc_utils.py  responses.py  rpc_client.py  rpc_client_basic.py  rpc_client_simple.py  rpc_index.py  rpc_server.py
rpc/tests/: conftest.py  test_jsonrpc_utils.py  test_responses.py  test_rpc_client.py  test_rpc_server.py
site/: .coveragerc  Dockerfile  Dockerfile-central-rpc  README.md  config.ini  cromwell-build.sh  cromwell-setup.sh  cromwell.Dockerfile  dev-requirements.txt  docker-compose.yml  docker-entrypoint.sh  jaws-site.ini  jaws_site_cli.py  pyproject.toml  requirements.txt  server.py  setup.py  site.Dockerfile
site/jaws_site/: Batch.py  Globus.py  Run.py  Task.py  Worker.py  __init__.py  analysis.py  api.py  aws_transfer.py  background.py  central_rpc_operations.py  cli.py  concurrency.py  config.ini  config.py  consumer.py  cromwell.py  cromwell_cli.py  daemon.py  data_transfer.py  database.py  datatransfer_protocol.py  db.py  dispatch.py  env_interpolation.py  env_vars.activate.sh  env_vars.deactivate.sh  errors.py  export.py  filewriter.py  globus.py  jaws_site_cron.py  jawsd.py  jtm_rpc_operations.py  log.py  messages.py  models.py  operations.py  pagurus.py  perf_metrics.py  (+27 more)
site/sql_tables/: Jaws.sql
site/tests/: .coveragerc  36f86fab-830c-4022-86be-a175c61989d7.json  3f039d2d-d1db-4c98-b927-305b49ff1651.metadata.json  3f039d2d-d1db-4c98-b927-305b49ff1651.outfiles.json  3f039d2d-d1db-4c98-b927-305b49ff1651.outputs.json  40231670-b6d5-4ec4-b475-5a78a4c00b23.metadata.json  469bcdd6-d67f-455f-9475-438349f41631.errors.json  469bcdd6-d67f-455f-9475-438349f41631.metadata.json  5a2cbafe-56ed-42aa-955d-fef8cb5014bb.metadata.json  5a2cbafe-56ed-42aa-955d-fef8cb5014bb.outputs.json  5c7ca4aa-6bc2-4f90-a80c-6232ee64e1f0.metadata.json  5c7ca4aa-6bc2-4f90-a80c-6232ee64e1f0.task-summary.json  62a74b3f-2891-48da-ac49-895a00bcd575.metadata.json  7408a4f1-bc85-49ba-8d5f-c886261ab6a0.metadata.json  74a0bf98-5bf3-4416-84bc-2fca6f4ed21a.metadata.json  __init__.py  conftest.py  (+55 more)
(+1181 files in other folders)
