[build-system]
requires = ["setuptools_scm>=6.2", "wheel", "setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "jaws_site"
requires-python = ">3.8"
dynamic = ["version"]
description = "JAWS Site Server"
authors = [
{name = "Edward Kirton", email = "ekirton@lbl.gov"},
{name = "Mario Melara", email = "mamelara@lbl.gov"},
{name = "Georg Rath", email = "grath@lbl.gov"},
{name = "Seung-Jin Sul", email = "ssul@lbl.gov"},
{name = "Stephan Trong", email = "strong@lbl.gov"},
{name = "Kelly Rowland", email = "kellyrowland@lbl.gov"},
{name = "Nick Tyler", email = "tylern@lbl.gov"},
{name = "Jeff Froula", email = "jlfroula@lbl.gov"},
{name = "Ramani Kothadia", email = "ramanik@lbl.gov"},
{name = "Elais Player", email = "elais@lbl.gov"}]
dependencies = [
    "AMQPStorm",
    "boto3",
    "click",
    "deepdiff",
    "mysql-connector-python",
    "requests",
    "schedule",
    "shortuuid",
    "SQLAlchemy",
    "zipp",
    "numpy",
    "pandas",
    "pika",
    "moto",
    "matplotlib",
    "psutil",
    "parallel_sync"
]

[project.optional-dependencies]
dev = ["pytest", "requests-mock", "pytest-cov", "flake8", "deepdiff", "typing_extensions"]

[project.scripts]
jaws-site = "jaws_site.cli:jaws"

[project.urls]
repository = "https://library.jgi.doe.gov/advanced-analysis/jaws-site"
changelog = "https://code.jgi.doe.gov/advanced-analysis/jaws-site/-/blob/main/CHANGELOG.md"
documentation = "https://jaws-docs.readthedocs.io/en/latest/"


[tool.setuptools]
package-dir = {"" = "src"}