[tool.poetry]
name = "jaws_central"
version = "2.7.1"
description = "Central server for JGI Analysis Workflows Service (JAWS).  Command-line clients (see: JAWS Client) interact (only) with this server via REST and JSON requests."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
AMQPStorm = "2.9.0"
appdirs = "1.4.4"
asyncio = "3.4.3"
attrs = "21.2.0"
blinker = "1.4"
certifi = "2021.5.30"
cffi = "1.14.6"
chardet = "4.0.0"
charset-normalizer = "2.0.3"
click = "7.1.2"
clickclick = "20.10.2"
configparser = "5.0.2"
Flask = "1.1.4"
Flask-Cors = "3.0.10"
Flask-SQLAlchemy = "2.5.1"
globus-sdk = "2.0.1"
greenlet = "1.1.0"
Jinja2 = "2.11.3"
jsonschema = "3.2.0"
connexion = "2.9.0"
cryptography = "3.4.7"
entrypoints = "0.3"
idna = "3.2"
importlib-metadata = "4.6.1"
inflection = "0.5.1"
isodate = "0.6.0"
itsdangerous = "1.1.0"
Markdown = "3.3.4"
MarkupSafe = "2.0.1"
mccabe = "0.6.1"
multidict = "5.1.0"
mysql-connector-python = "8.0.26"
openapi-schema-validator = "0.1.5"
openapi-spec-validator = "0.3.1"
pamqp = "2.3.0"
pathspec = "0.9.0"
protobuf = "3.17.3"
pycodestyle = "2.7.0"
pycparser = "2.20"
pyflakes = "2.3.1"
PyJWT = "1.7.1"
pyrsistent = "0.18.0"
pytz = "2021.1"
PyYAML = "5.4.1"
regex = "2021.7.6"
requests = "2.26.0"
six = "1.16.0"
soupsieve = "2.2.1"
SQLAlchemy = "1.4.22"
swagger-ui-bundle = "0.0.8"
toml = "0.10.2"
typed-ast = "1.4.3"
typing-extensions = "3.10.0.0"
urllib3 = "1.26.6"
Werkzeug = "1.0.1"
yarl = "1.6.3"
zipp = "3.5.0"
jaws-rpc = "^2.7.1"

[[tool.poetry.source]]
name = "gitlab"
url = "https://code.jgi.doe.gov/api/v4/projects/5/packages/pypi/simple"
secondary = true

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools_scm>=6.2", "wheel", "setuptools>=45"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]
write_to = "jaws_central/_version.py"
