[tool.poetry]
name = "jaws_client"
version = "2.7.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "4.9.3"
certifi = "2021.5.30"
charset-normalizer = "2.0.3"
click = "7.1.2"
configparser = "5.0.2"
deepdiff = "5.5.0"
idna = "3.2"
importlib-metadata = "4.6.1"
nested_dict = "1.61"
ordered-set = "4.0.2"
pytz = "2021.1"
requests = "2.26.0"
soupsieve = "2.2.1"
tqdm = "4.60.0"
typing-extensions = "3.10.0.0"
urllib3 = "1.26.6"
zipp = "3.5.0"

[[tool.poetry.source]]
name = "gitlab"
url = "https://code.jgi.doe.gov/api/v4/projects/5/packages/pypi/simple"
secondary = true

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
