[tool.poetry]
name = "jaws_jtm"
version = "2.7.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
AMQPStorm = "2.9.0"
cffi = "1.14.6"
click = "7.1.2"
cryptography = "3.4.7"
importlib-metadata = "4.6.1"
mysql-connector-python = "8.0.26"
pamqp = "2.3.0"
pika = "1.2.0"
protobuf = "3.17.3"
psutil = "5.8.0"
pycparser = "2.20"
shortuuid = "1.0.1"
six = "1.16.0"
typing-extensions = "3.10.0.0"
zipp = "3.5.0"
jaws-rpc = "^2.7.1"

[[tool.poetry.source]]
name = "gitlab"
url = "https://code.jgi.doe.gov/api/v4/projects/5/packages/pypi/simple"
secondary = true

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
