[project]
name = "jaws-pubsub"
authors = [{name = "Elais Player", email = "elais@lbl.gov"}]
version = "0.1"
description = "Pubsub utilities for jaws-site."
requires-python = ">=3.10"

dependencies = [
  "pika",
  "msgpack"
]

[tool.setuptools.packages.find]
where = ["components.pubsub"]
include = ["log", "broker"]