[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jaws_pubsub"
dynamic = ["version"]
authors = [{name = "Elais Player", email = "elais@lbl.gov"}]
description = "Pubsub utilities for jaws-site."
requires-python = ">=3.10"
dependencies = [
  "pika",
  "msgpack"
]

[tool.setuptools]
packages = ["components.jaws_pubsub"]

[tool.ruff]
ignore-init-module-imports = true