[tool.poetry]
name = "jaws_rpc"
version = "2.7.1"
description = "A JSON-RPC2 library based on AMQPStorm."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
AMQPStorm = "2.9.0"
pamqp = "2.3.0"

[[tool.poetry.source]]
name = "gitlab"
url = "https://code.jgi.doe.gov/api/v4/projects/5/packages/pypi/simple"
secondary = true

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
