[build-system]
requires = ["setuptools_scm>=6.2", "wheel", "setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "jaws_rpc"
dynamic = ["version"]
description = "A JSON-RPC2 library based on AMQPStorm"
authors = [
{name = "Edward Kirton", email = "ekirton@lbl.gov"},
{name = "Mario Melara", email = "mamelara@lbl.gov"},
{name = "Georg Rath", email = "grath@lbl.gov"},
{name = "Seung-Jin Sul", email = "ssul@lbl.gov"},
{name = "Stephan Trong", email = "strong@lbl.gov"},
{name = "Kelly Rowland", email = "kellyrowland@lbl.gov"},
{name = "Nick Tyler", email = "tylern@lbl.gov"},
{name = "Jeff Froula", email = "jlfroula@lbl.gov"},
{name = "Ramani Kothadia", email = "ramanik@lbl.gov"}]
requires-python = ">=3.9,<3.12"
dependencies = [
    "AMQPStorm",
    "pamqp",
    "SQLAlchemy"
]

[project.optional-dependencies]
dev = ["requests-mock", "pytest-cov"]

[tool.setuptools]
packages = ["jaws_rpc"]
zip-safe = false