[tool.poetry]
name = "jaws_site"
version = "2.7.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
AMQPStorm = "2.9.0"
cffi = "1.14.6"
click = "7.1.2"
cryptography = "3.4.7"
deepdiff = "5.5.0"
globus-sdk = "2.0.1"
greenlet = "1.1.0"
importlib-metadata = "4.6.1"
mysql-connector-python = "8.0.26"
pamqp = "2.3.0"
pycparser = "2.20"
python-dateutil = "2.8.2"
requests = "2.26.0"
requests-mock = "1.9.3"
schedule = "1.1.0"
shortuuid = "1.0.1"
SQLAlchemy = "1.4.22"
typing-extensions = "3.10.0.0"
zipp = "3.5.0"
boto3 = "1.20.49"
matplotlib = "3.6.2"
psutil = "5.8.0"
jaws-rpc = "^2.7.1"

[[tool.poetry.source]]
name = "gitlab"
url = "https://code.jgi.doe.gov/api/v4/projects/5/packages/pypi/simple"
secondary = true

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
